# MosamaticDesktop

./: README.md  pyproject.toml  pyproject.toml.macos  pyproject.toml.windows  requirements-macos.txt  requirements-win.txt  requirements-windows.txt  requirements.txt
mosamaticdesktop/: README.rst  main.py  pyproject.toml
mosamaticdesktop.old/: CHANGELOG  LICENSE
mosamaticdesktop.old/core/: utils.py
mosamaticdesktop.old/core/processors/: decompress.py
mosamaticdesktop.old/ui/: settings.py
mosamaticdesktop.old/ui/panels/: logpanel.py  mainpanel.py
mosamaticdesktop/core/: load.py  logging.py  pipelines.py  processors.py
mosamaticdesktop/core/data/: dicomseriesdata.py  multidicomseriesdata.py
mosamaticdesktop/src/mosamaticdesktop/: app.py
mosamaticdesktop/src/mosamaticdesktop.dist-info/: METADATA  top_level.txt
mosamaticdesktop/tests/: sources.py  test_core.py  test_loaders.py
mosamaticdesktop/ui/: constants.py  mainwindow.py  utils.py
mosamaticdesktop/ui/dialogs/: loadfiledialog.py  loadfilesetdialog.py  loadmultidicomfiledialog.py
scripts/: activate.bat  clean-python-environment.ps1  createpackage.bat  deploy2pypi.bat  deploy2pypi.sh  install-mosamaticdesktop.bat  install-pyenv-win.ps1  install-pyenv.bat  install-python.bat  install.bat  install.sh  run.bat  run.sh  test.bat  test.sh  updatetoml.bat  updatetoml.sh
scripts.old/: deploy2pypi.bat  deploy2pypi.sh  install.sh  run.sh  test.bat
scripts.old/packagefiles/: clean-python-environment.bat  run-mosamaticdesktop.bat
scripts.old/python/: updatetomlrequirements.py
scripts/python/: updatetomlrequirements.py  updatetomlversion.py
tests/: sources.py  test_mainwindow.py  test_mosamaticdesktop.py
tests.old/: sources.py
(+58 files in other folders)
