[tool.poetry]
name = "mosamaticdesktop-macos"
version = "2.0.3"
description = "Desktop application for analyzing body composition in CT images (MacOS version)"
authors = ["Ralph Brecheisen <ralph.brecheisen@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "mosamaticdesktop", from = "." },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
poetry = "^2.1.4"
pytest = "^8.4.1"
pyside6-essentials = ">=6.9"
mosamatic-cli-macos = ">=1.6"
click = "<8.1.8"
pendulum = "^3.1.0"
pandas = "^2.3.1"
openpyxl = "^3.1.5"
pillow = "^11.3.0"
python-gdcm = "^3.0.26"
torch = "^2.8.0"
torchvision = "^0.23.0"
tensorboard = "2.15.2"
tensorboard-data-server = "0.7.2"
tensorflow = "2.15.0"
tensorflow-macos = "2.15.0"

[tool.poetry.scripts]
mosamaticdesktop = "mosamaticdesktop.app:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[tool.pytest.ini_options]
addopts = "-s"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"